syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.homo.proto.client";
option java_outer_classname = "CommonProto";

package msg;

//message ClientRouterMsg {
//  string serviceName   = 1;
//  string token         = 2;
//  string userid        = 3;
//  string channlId      = 4;
//  string msgId         = 5;
//  bytes msgContent     = 6;
//}
//
//RpcHandler
//message ClientAuthMsg {
//  string token        = 1;
//  string userid         = 2;
//}

message ParameterMsg {
  string userId   = 1;
  string channelId     = 2;
}

//message ToClientReq {
//  string clientid    = 1;
//  string msgType     = 2;
//  bytes msgContent   = 3;
//}
//
//message RouterMsgReq {
//  string serviceName   = 1;
//  string msgId         = 2;
//  string msgType       = 3;
//  bytes msgContent     = 4;
//}
//
//
//message LoginMsgReq {
//  string token          = 1;
//  string userId         = 2;
//  string channelId      = 3;
//}
//
//message LoginMsgResp {
//  string errorMsg     = 1;
//}
//
////有状态proxy错误码
//message ProxyErrorMsg {
//  enum ErrorType //枚举消息类型
//  {
//    OK = 0;
//    ERROR = 1;
//    USER_NOT_FOUND = 2;
//    PODID_IS_NULL = 3;
//  }
//  int32 errorCode = 1;
//  string info = 2;
//}